# imageviewer

./: .gitignore  AGENTS.md  LICENSE  README.md  build.bat  index.html  package.json  vite.config.ts
.cargo/: config.toml
scripts/: bump-version.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/Breadcrumb/: Breadcrumb.css  Breadcrumb.tsx
src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx
src/components/FolderTree/: FolderTree.css  FolderTree.tsx  FolderTreeNode.tsx
src/components/ImageViewer/: ImageInfoBar.tsx  ImageViewer.css  ImageViewer.tsx  ViewerCanvas.tsx
src/components/Layout/: Layout.css  Layout.tsx
src/components/MediaGrid/: MediaCard.tsx  MediaGrid.css  MediaGrid.tsx
src/components/OptionsModal/: OptionsModal.css  OptionsModal.tsx
src/components/RenameModal/: RenameModal.css  RenameModal.tsx
src/components/StatusBar/: StatusBar.css  StatusBar.tsx
src/store/: appStore.ts
src/types/: index.ts
