[package]
name = "imageviewer"
version = "0.1.0"
description = "A Tauri Image Viewer App"
authors = []
edition = "2021"

[lib]
name = "imageviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[features]
# This feature is used for production builds or when `devUrl` is not configured;
# do NOT remove it.
custom-protocol = ["tauri/custom-protocol"]
